# git-command-actor

./: Cargo.toml  README.md  build.sh  init.json  manifest.toml
examples/: add-all.json  commit.json  diff-cached.json  status.json
src/: bindings.rs  git.rs  lib.rs  types.rs
wit/: world.wit
