[package]
name = "git-command-actor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "colinrozzi:git-command-actor"

[package.metadata.component.target.dependencies]
"theater:simple" = { path = "./wit/deps/theater-simple" }

[dependencies]
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[dependencies.wit-bindgen-rt]
features = ["bitflags"]
version = "0.39.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"
